@@ -274,9 +274,9 @@ sub return : Callback(priority => 6) {
     my $version_view = get_state_data($widget, 'version_view');
     my $fa = get_state_data($widget, 'template');
 
-    if ($version_view) {
+    if ($version_view || $self->value eq 'diff') {
         my $fa_id = $fa->get_id;
-        clear_state($widget);
+        clear_state($widget) if $version_view;
         $self->set_redirect("/workflow/profile/template/$fa_id/?checkout=1");
     } else {
         my $url;
